--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="social">
 
-            <a href="mailto:"><i class="fa fa-envelope"></i></a>
+            <a href="mailto:xmarshmellox17@gmail.com"><i class="fa fa-envelope"></i></a>
             <a href="https://www.facebook.com/Franz.Manrique17/about"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/frnz_mnrq/"><i class="fab fa-instagram"></i></a>
             <a href="https://www.tiktok.com/@chcmnto_o?is_from_webapp=1&sender_device=pc"><i class="fab fa-tiktok"></i></a>
