--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <a href="https://www.tiktok.com/@chcmnto_o?is_from_webapp=1&sender_device=pc"><i class="fab fa-tiktok"></i></a>
             <a href="https://twitter.com/Frankzz_17"><i class="fab fa-twitter"></i></a>
             <a href="https://www.youtube.com/feed/you"><i class="fab fa-youtube"></i></a>
-            <a href=""><i class="fab fa-github"></i></a>
-            <a href=""><i class="fas fa-mug-hot ko-fi"></i></a>
+            <a href="https://github.com/Frankz-17"><i class="fab fa-github"></i></a>
+            <a href="https://ko-fi.com/frankz_17#paypalModal"><i class="fas fa-mug-hot ko-fi"></i></a>
             <a href="https://www.pinterest.ph/franzmanrique/"><i class="fab fa-pinterest"></i></a>
             <a href="https://frankz-17.itch.io/"><i class="fab fa-itch-io"></i></a>
         </div>
